<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scorer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_match">New Match</string>
    <string name="view_recent_results">View Recent Results</string>
    <string name="manage_team">Manage Teams</string>
    <string name="manage_players">Manage Players</string>
    <string name="view_stats">View Statistics</string>
    <string name="title_activity_manage_players">Manage Players</string>
    <string name="add_player">Add Player</string>
    <string name="title_activity_add_player">Add Player</string>
	<string name="name">Name</string>
	<string name="add">Add</string>
</resources>